# FFmpegPlayer-1

./: README.md  settings.gradle
FunCore/: build.gradle
FunCore/src/main/: AndroidManifest.xml
FunCore/src/main/res/layout/: item_capture_view.xml  item_media_view.xml
FunCore/src/main/res/values/: colors.xml  dimens.xml  strings.xml
FunPlayer/: build.gradle
FunPlayer/src/main/: AndroidManifest.xml
FunPlayer/src/main/cpp/: CMakeLists.txt
FunPlayer/src/main/cpp/metadata/: CMakeLists.txt  MediaMetadataRetriever.cpp  MediaMetadataRetriever.h  MediaMetadataRetrieverEx_Jni.cpp  Metadata.cpp  Metadata.h
FunPlayer/src/main/cpp/player/: CMakeLists.txt
FunPlayer/src/main/cpp/player/android/: JniHelper.cpp  JniHelper.h  MediaPlayerControl.cpp  MediaPlayerControl.h  MediaPlayerEx.cpp  MediaPlayerEx.h  MediaPlayerEx_Jni.cpp
FunPlayer/src/main/cpp/player/source/common/: FFmpegUtils.cpp  FFmpegUtils.h
FunPlayer/src/main/cpp/player/source/convertor/: AudioResampler.cpp  AudioResampler.h
FunPlayer/src/main/cpp/player/source/decoder/: AudioDecoder.cpp  AudioDecoder.h  MediaDecoder.cpp  MediaDecoder.h  VideoDecoder.cpp  VideoDecoder.h
FunPlayer/src/main/cpp/player/source/device/: AudioDevice.cpp  AudioDevice.h  VideoDevice.cpp  VideoDevice.h
FunPlayer/src/main/cpp/sound/: CMakeLists.txt  SoundTouchWrapper.cpp  SoundTouchWrapper.h
FunPlayer/src/main/cpp/utils/: AndroidLog.h  Condition.h  Errors.h  Mutex.h  Thread.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_media_player.xml
(+95 files in other folders)
